--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
       <h1 class="page-title">Taskinator</h1>
       <p>Click the button below to add a new task!</p>
-      <button id="save-task" class="btn">Add task</button>
       <form id="task-form">
         <div class="form-group">
           <input type="text" name="task-name" placeholder="Enter Task Name" />
@@ -26,16 +25,14 @@
           </select>
         </div>
         <div class="form-group">
-          <button id="save-task" type="submit" class="button">Add Task</button>
+          <button id="save-task" type="submit" class="btn">Add Task</button>
         </div>
       </form>
     </header>
     <main class="page-content">
       <section class="task-list-wrapper">
         <h2 class="list-title">Tasks To Do</h2>
-        <ul id="tasks-to-do" class="task-list">
-          <li class="task-item"></li>
-        </ul>
+        <ul id="tasks-to-do" class="task-list"></ul>
       </section>
     </main>
     <footer>&copy;2020 by Taskinator</footer>
